This fix adds a overflow hidden to body in mobile devices

--- a/style.css
+++ b/style.css
@@ -367,7 +367,10 @@ text-decoration: none;
 /* For Screen Sizes 300px-728px */
 
 @media screen and (min-width: 300px) and (max-width: 728px){
-/* Header CSS */
+    body {
+        overflow: hidden!important;
+    }
+    /* Header CSS */
 header{
     background: var(--header-background-color);
     padding: 10px;
@@ -457,7 +460,7 @@ header{
     height: 400px;
     border-radius: 50%;
     position : absolute;
-    overflow:hidden !important;
+    overflow:hidden;
     transform: scale(0.8);
   }
 
